# mathfish

./: .gitignore  README.md  pyproject.toml  runningRequirements.txt
data/: generated_problems_as_input_data.jsonl  generated_problems_teacher_annotations.csv  gsm8k_test.jsonl
data/few_shot/: few_shot_entailment.csv  few_shot_tagging.csv
mathfish/: utils.py
mathfish/datasets/: __init__.py  base_dataset.py  few_shot_tagging_exp.csv  few_shot_verification_exp.csv  old_prompts.json  prompts.json  random_tagger_dataset.py  tree_tagger_dataset.py  verification_dataset.py
mathfish/evaluators/: __init__.py  base_evaluator.py  tagging_evaluator.py  verification_evaluator.py
mathfish/modelWrappers/: __init__.py  base_wrapper.py  dispatch_openai_requests.py  predictionUtils.py  tagging_wrapper.py  verification_wrapper.py
mathfish/preprocessors/: __init__.py  data_augment.py  data_reformat.py  data_standardize.py
mathfish/tree_retriever/: __init__.py  atc_map.py  retrieve_tree.py
scripts/: eval.py  evaluate_tree_traverser.py  output_dataset_tagging.py  output_dataset_verification.py  run_wrapper.py  scrape_fishtank_learning.py  scrape_illustrative_math.py  standardize_scraped_data.py  tree_traverser.py  utils.py
tests/: test_json.py  test_json.sh
tests/evaluation/: test_tagging_evaluator.py  test_verification_evaluator.py
tests/fixtures/: toy_domain_groups.jsonl  toy_eval_data_file.jsonl  toy_family_standards.jsonl  toy_nonstandardized_standards.jsonl  toy_standardized_standards.jsonl  toy_standards.jsonl  toy_tag_eval_data_file.jsonl  toy_tag_eval_data_file2.jsonl  toy_tag_eval_data_file3.jsonl  toy_tree.jsonl
tests/preprocessing/: test_data_augment.py  test_data_reformat.py  test_data_standardize.py
tests/tree_retriever/: test_retrieve_tree.py
tests/wrapper/: test_base_wrapper.py  test_tagging_wrapper.py  test_verification_wrapper.py
