[project]
name = "mathfish"
version = "0.0.1"
description = "Evaluating Common Core Alignment"
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "numpy",
    "matplotlib",
    "tqdm",
    "blingfire==0.1.8",
    "pandas",
    "seaborn",
    "requests==2.28.1",
    "scikit-learn>=1.2.0",
    "dashtable",
    "html-to-json",
    "together",
    "torch",
    "openai",
    "transformers",
    "tenacity",
    "python-dotenv",
    "sentencepiece",
    "protobuf",
    "accelerate"
]

[[project.authors]]
name = "Allen Institute for Artificial Intelligence"
email = "contact@allenai.org"

[[project.authors]]
name = "Lucy Li"
email = "lucyl@allenai.org"

[[project.authors]]
name = "Tal August"
email = "tala@allenai.org"

[[project.authors]]
name = "Rose E. Wang"
email = "rewang@cs.stanford.edu"

[[project.authors]]
name = "Luca Soldaini"
email = "luca@soldaini.net"

[[project.authors]]
name = "Kyle Lo"
email = "kylel@allenai.org"

[tool.setuptools.packages.find]
where = ['.',]

[tool.setuptools.package-data]
mathfish = [
    '../requirements.txt',
    'py.typed',
]

[build-system]
build-backend = 'setuptools.build_meta'
requires = [
    'setuptools >= 61.0.0',
    'pip >= 21.0.0',
    'wheel',
    'Cython==0.29.36'
]

[project.optional-dependencies]
dev = [
    'pytest',
    'pytest-xdist',
    'pytest-cov',
    'mypy>=0.971'
]

[tool.pytest.ini_options]
addopts = '-n auto --cov=.'
testpaths = ['tests/']
pythonpath = [
  '.', 'src',
]
norecursedirs = "tests/wrapper"
python_classes = ['Test*', '*Test']
log_format = '%(asctime)s - %(levelname)s - %(name)s - %(message)s'
log_level = 'DEBUG'
markers = []
filterwarnings = []

[tool.coverage.run]
omit = [
    '*__init__*',
    '*Test*',
    'tests/fixtures/*',
    'tests/*',
]
[tool.coverage.report]
fail_under = 25


[tool.black]
line-length = 115

include = '\.pyi?$'

exclude = '''
(
      __pycache__
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vscode
    | \.venv
    | \bdist\b
    | \bdoc\b
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.autopep8]
max_line_length = 115
in-place = true
recursive = true
aggressive = 3

[tool.mypy]
python_version = 3.8
ignore_missing_imports = true
no_site_packages = true
allow_redefinition = false
warn_unused_configs = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = false
warn_unreachable = true
show_error_codes = true
pretty = true

[tool.mypy-tests]
strict_optional = false
